zapata-agentforce/force-app/main/default/objects/Case/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <description>Unidad relacionada segun el plan seccion 6.2. Coexiste con el campo estandar AssetId.</description>
    <label>Unidad relacionada</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Casos de escalamiento</relationshipLabel>
    <relationshipName>Casos_Escalamiento</relationshipName>
    <type>Lookup</type>
</CustomField>