zapata-agentforce/force-app/main/default/objects/Case/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Une conversacion, accion y log.</description>
    <label>Correlation Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>