zapata-agentforce/force-app/main/default/objects/Case/fields/Politica_Aplicada__c.field-meta.xml
<CustomField>
    <fullName>Politica_Aplicada__c</fullName>
    <description>Version de politica usada para autorizar o negar la disposicion.</description>
    <label>Politica aplicada</label>
    <length>40</length>
    <type>Text</type>
</CustomField>