zapata-agentforce/force-app/main/default/objects/Case/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <description>Orden relacionada si existe.</description>
    <label>Orden relacionada</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Casos de escalamiento</relationshipLabel>
    <relationshipName>Casos_Escalamiento</relationshipName>
    <type>Lookup</type>
</CustomField>